# k210-playground-rs

./: .gitignore  Cargo.toml  README.md  flash.sh
.cargo/: config
examples/: blinky.rs  blinky2.rs  foo.rs  hello.rs
src/: clock.rs  delay.rs  lib.rs  spi.rs
