[package]
name = "k210-playground"
version = "0.1.0"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
riscv = "0.6"
riscv-rt = "0.8"
# outdated in crates.io
# k210-hal = { git = "https://github.com/riscv-rust/k210-hal" }
k210-hal = { path = "../k210-hal" }
k210-pac = "0.2" # { git = "https://github.com/riscv-rust/k210-pac" }

embedded-hal = { version = "0.2", features = ["unproven"] }
display-interface-spi = "0.4"
display-interface = "0.4"
st7789 = "0.5.0"
nb = "1.0.0"
embedded-graphics = "0.6"

num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }

[dev-dependencies]
# st7735-lcd = "0.8"
